syntax = "proto3";
package gamepb.itempb;
option go_package = "qq-farm-bot/proto/itempb";

import "corepb/core.proto";

message BagRequest {}
message BagReply { corepb.ItemBag item_bag = 1; }

message SellRequest { repeated corepb.Item items = 1; }
message SellReply {
    repeated corepb.Item sell_items = 1;
    repeated corepb.Item get_items = 2;
}

message UseRequest {
    int64 item_id = 1;
    int64 count = 2;
    repeated int64 land_ids = 3;
}
message UseReply { repeated corepb.Item items = 1; }

message ItemNotify { repeated corepb.ItemChg items = 1; }

message BatchUseItem {
    int64 item_id = 1;
    int64 count = 2;
}
message BatchUseRequest { repeated BatchUseItem items = 1; }
message BatchUseReply { repeated corepb.Item items = 1; }
