syntax = "proto3";
package corepb;
option go_package = "qq-farm-bot/proto/corepb";

message Item {
    int64 id = 1;
    int64 count = 2;
    int64 expire_time = 3;
    int64 uid = 6;
    bool is_new = 7;
    repeated int64 mutant_types = 8;
}

message ItemBag {
    repeated Item items = 1;
}

message ItemChg {
    Item item = 1;
    int64 delta = 2;
}
